fixed image arrows on mobile

--- a/src/components/node/NodeImageSwiperBlock/styles.module.scss
+++ b/src/components/node/NodeImageSwiperBlock/styles.module.scss
@@ -27,21 +27,33 @@
   :global(.swiper-button-prev) {
     color: white;
     font-size: 10px;
-    width: 48px;
-    height: 48px;
+    width: 40px;
+    height: 40px;
     background: $content_bg;
     border-radius: 100%;
     transition: transform 0.25s;
     transform: scale(1);
 
+    @include tablet {
+      transform: scale(0.5);
+    }
+
     &:global(.swiper-button-prev) {
       left: $gap;
-      padding-right: 5px;
+      padding-right: 3px;
+
+      @include tablet {
+        left: 5px;
+      }
     }
 
     &:global(.swiper-button-next) {
       right: $gap;
-      padding-left: 5px;
+      padding-left: 3px;
+
+      @include tablet {
+        right: 5px;
+      }
     }
 
     &:global(.swiper-button-disabled) {
@@ -50,7 +62,7 @@
     }
 
     &::after {
-      font-size: 24px;
+      font-size: 18px;
       pointer-events: none;
       font-weight: 900;
     }
